--- a/index.html
+++ b/index.html
@@ -1,74 +1,222 @@
-<h1>生存斧新手教程</h1>
-
-1-注册篇
-首先,你需要注意到上面的[聊天框]按钮
----以下是注册的所有步骤---
-1.打开[聊天框]
-2.输入你的[游戏ID]
-3.创建你的[密码]
-4.再次确认你的[密码]
-
-2-登录篇
-既然你已经学会了注册账号,
-那么你一定要学会登录账号。
----以下是登录的所有步骤---
-1.打开[聊天框]
-2.输入你设置的[密码]
-3.登录完成
-
-3-传送篇
-服务器内有许多世界，
-我们无法正常的步行通过。
-所以传送就用到了：
----接下来是服务器内所有的世界---
-（提示：带有#的世界需要
-在前面输入/w+空格+世界名）(括号内的不用填)
-1.world(生存世界)
-2.zc(主城)
-3.zy(资源区)
-4.(#)nether(地狱)
-5.ender(末地)
-6.shop(商店)
-7.pvp(玩家对战世界)
-
-4-基础指令
-在这款服务器里面有很多的指令,
-这些指令是最基础的。
----以下是所有常用的指令---
-1./w 世界名 (这个指令是用于世界传送的，
-世界名的话需要填写之前介绍过的世界
-2./sethome(安家) /home(回家)
-(使用安家需要支付300金币)
-3./kill(可以脱离一个无法出去的空间)
-4./tpa 玩家名字(传送至指定玩家)
-5./tpahere 玩家名字(让指定玩家传送到你这)
-6./tell 玩家 你要说的话(和某玩家说悄悄话)
-7./zp i (用方块点击任何一处地方可以获得此方块破坏和放置信息,如果开启,可以再次输入此指令关闭)
-8./prefix 称号名称 (设置自己的称号)
-9./res tp 领地名称(可以传送至指定领地)
-其余指令请输入/help(1~6)
-告示牌指令需要加上plcmd 换行 命令
-
-5-金币篇
-金币是这个服务器内的硬通货,是一种指定货币。
----以下是关于金币的所有教程---
-1.要获得金币,请输入/qd来获取每日金币
-2.前往shop的回收商店,挖取资源回收物品,可以获得金币
-3.要把钱给别人,可以/支付 玩家名字 金币数
-
-6-组织篇
-组织可以帮助你在服务器内更好的活下去。
----以下是关于组织的帮助---
-1.要注册组织,请注意以下事项
-1-1.首先需要确保你在服务器内的时间已满90天(/qd可以查看你的在服日期)
-1-2(1).前往grps.bbcnews.top领取一个报备号,然后去添加服务器群内的PTP的好友报备
-1-2(2)直接找云服务报备(提供你要创建的组织名字,/qd菜单的日期
-2.组织一般会有领地,建议是在组织的领地里面建造庇护所，然后添加组织群聊。
-
-好了，本服务器的基本新手教程已解说完成，你可以开始你的生存冒险啦！
-
-by laoda114
-服务器群聊:625015871
-服主：sunch233
-蜗牛：tx666
-云服务：cp01
+生存斧服务器-新手教程-第二版
+-----前言-----
+此教程是为了帮助一些新手玩家遇到的困难。
+·
+·
+-----第一章：进入篇-----
+对于某些人来说，加入服务器是个难题。
+请按你遇到的问题对症下药。
+·
+1.服务器IP端口是什么?
+答:IPmc-kkk.top   端口:19132
+·
+2.显示login timeout
+答：这个的意思是登录时间过长，可以尝试[重启]你的[手机]
+·
+3.显示''无法连接至互联网,请检查您的互联网再试''
+答:你可能使用的是移动数据网络,这玩意不能锁定IP，无法连接,可以尝试一个有网络的场所或者是下载一个流量客户端。如果你已经连接了互联网，可以断网重连
+·
+4.显示''无法连接至世界''
+答:重新启动[手机]可以解决一部分问题。
+·
+5.显示''名称不能用Steve''
+答:steve是游戏内的初始名称。你需要更改为除了默认名称外的所有名称。
+更改教程：主界面>选项>名称>点击更改
+·
+·
+-----第二章：注册篇-----
+既然你已经进入了服务器内部，那么你必须要注册才能游玩游戏。
+·
+第一步：打开游戏界面上方的[聊天]按钮。
+(如果使用的是iOS，请点[暂停]旁边的按键[聊天])
+·
+第二步：查看聊天框内的内容，请查看自己的聊天框内的内容，然后看以下内容。
+·
+1.显示''请输入你的密码'',但是你没有设置密码
+答：这是因为你使用的名称已经被其他人注册了，服务器内每个名称代表着一个账号。
+解决方法：退出并重新更改一个名字（更改方法请看上面）
+·
+2.显示''正在注册你的账号,请先输入你的名称''
+显示这个就可以看第三步了。
+·
+第三步：按照以下的流程注册账号
+·
+1：你设置的什么[名字]就在[聊天框]内输入你的[名字]
+·
+2.你需要设置一个密码,首先,你需要设置一个密码
+(例：123456（不建议）
+·
+3.你需要再次确认你设置的密码
+(例：123456（不建议）
+·
+如果显示''注册完成,欢迎来到生存斧''之类的文字,就说明你已经注册成功了。
+·
+·
+-----第三章：登录篇-----
+你已经学会注册了，若你想再次进入服务器，那你一定要查看以上的教程。
+·
+第一步：输入你设置的[密码]（例：123456（不建议））
+·
+第二步：登录成功，你可以进行游玩了。
+·
+·
+-----第四章：指令篇-----
+你已经可以进去游玩了，不过指令是这服务器的进阶玩法。接下来，这些是基本的指令和用途。
+(提示:括号内的注释不用写)
+·
+1./sethome或/安家(安置你的家,安置一次花费300金币)
+·
+2./home或/回家(回到你安置的家)
+·
+3./w 世界名
+(世界名里面填写：
+--1.world(生存区)
+--2.nether(地狱)(只能在前面输入/w 使用)
+--3.ender(假装是末地)
+--4.parkour(跑酷世界)(已失效)
+--5.zc(主城)
+--6.zy(资源区)
+--7.pvp(玩家对战)
+--8.shop(世界商店)
+·
+4./ws(打开世界玩家交易中心,不过一定要查看价格,小心破产)
+·
+5./cd(箱子菜单,里面有很多生存用得到的功能。)
+·
+6./res tp 领地名(传送到指定领地)
+·
+7.zp i(用方块点击要查看的地方的方块状态,如果已经打开查询模式，再次输入该命令可以关闭查询模式)
+·
+8./tpa 玩家名称(传送到别人那里)
+·
+9./tpahere 玩家名称 (让别人传送到你这)
+·
+10./tell 玩家名称 内容(和别人说悄悄话)
+·
+11./prefix 想要改的称号(输入这串指令，可以让你的称号改成你喜欢的称号)
+其余指令请输入/help 1~11来了解
+告示牌指令如下:
+(第1行:名称可有可无)
+(   第2行:plcmd    )
+(   第3行:命令     )
+(  第4行:命令扩展  )
+·
+·
+-----第五章：金币篇-----
+金币是服务器里面的硬通货，你应该学会如何使用。
+·
+1.要把钱给别人,输入/支付 玩家名 数量
+·
+2.要获得免费的钱,输入/qd并点击黄色的羊毛
+·
+3.要通过劳动赚钱,可以前往shop世界的回收商店
+·
+4.要使用钱可以前往shop世界的出售商店
+·
+5.输入/ws可以购买其他玩家的商品,一定要注意价格,否则容易破产
+·
+6.想把自己的东西卖到玩家商店?手持你要卖的物品,输入/ws sell 价格
+·
+7.输入/查询 玩家名字 可以查看指定玩家的金币数量
+·
+8.输入/财富榜 可以查看财富的排行榜
+·
+9.服务器里面超过十万金币就需要扣税了。
+请务必注意此项！
+·
+以上就是所有关于金币的帮助了。祝你早日成为富豪！
+·
+·
+-----第六章：世界传送篇-----
+你不会还在傻傻的输入/w 世界名 这么麻烦的传送吧？观看以下世界传送帮助可以让你更快的传送世界
+以下是可以在聊天框内输入并传送的世界
+1.pvp(玩家对战)
+·
+2.parkour(跑酷世界,可以在聊天框内输入,但是已失效)
+·
+3.shop(世界商店可以买卖物品)
+·
+4.zc(主城可以为你提供帮助
+·
+5.zy(资源区，可以在此获取资源)
+·
+6.world(生存世界,可以在此随意生存)
+·
+7ender(假装是末地，因为0.14没有末地)
+·
+·
+-----第七章：组织篇-----
+加入组织可以帮你度过前期困难，
+而创建组织可以帮助其他玩家度过前期困难。
+·
+-----组织篇：关于加入组织-----
+组织可以帮助你有个美好的住所。
+·
+1.首先你需要了解每个组织的加入区在哪儿。
+(例：/res tp 斧头协会入会申请)
+·
+2.如果你的组织申请通过后，你需要更改组织设定的称号。
+·
+3.更改完称号后，你需要加入组织群，了解组织的区域。你可以在组织的区域建造庇护所。
+·
+-----组织篇：关于创建组织-----
+如果你觉得你足够有实力，可以创建组织。
+创建组织的资本需要至少有10w金币+用于给成员整改称号。十万金币可以让约10人加入你的组织，更改组织的称号。
+·
+你需要有一个QQ。
+想要注册组织必须要报备。
+报备要求是：/qd菜单登录时间满90天
+·
+-----方法一：找PTP报备-----
+·
+---第一步---
+前往浏览器顶部网址栏搜索
+“grps.bbcnews.top”
+输入你要注册的组织名字
+然后输入你的QQ号
+最后进行人机验证。
+·
+---第二步---
+领取报备号后，在群聊625015871中找到“PTP”，点开个人主页，点击[发消息]就可以找PTP报备了。
+·
+---第三步---
+当你进入PTP的聊天界面时，你需要先把报备号截图保存，并发送给PTP，然后打开/qd菜单
+截图天数，PTP会给你登记。
+·
+---创建完成---
+·
+-----方法二：找云服务报备-----
+·
+---第一步---
+在群聊625015871中找到“cp01”，并点开个人主页，点击发消息。
+·
+---第二步---
+和cp01发送你要注册的组织名字，干什么的，负责人QQ。
+·
+---组织审核通过，创建完成。---
+·
+以上任何一种方法完成之后，你可以自由选择是否创建组织群。
+·
+接下来是创建组织群的方法。
+·
+首先点击右上角[3个杠]，然后点击创建群聊，点击从群聊中选择（必须要至少3个人才能创建群聊）cp01,sunch233这两人,并给予管理员权限。
+·
+这下一个完整的组织就有啦(∩˃o˂∩)
+·
+·
+以上就是关于游玩生存斧服务器的所有帮助啦
+你已经可以自主生存了
+开始你的冒险之旅吧(●'◡'●)
+·
+·
+·
+制作人：laoda114
+服务器服主：sunch233
+服务器管理:PTP
+           cold
+生存斧云服务:cp01
+蜗牛:tx666
+·
+生存斧服务器一群：625015871
+生存斧服务器二群：873271137
+生存斧禁言通知群：743253728
